Refactor backend for production readiness and modularity
Updated environment configuration for clarity and production use, refactored Prisma schema for SQLite compatibility, and improved modularity by adding HealthModule. Enhanced AuthService to use Prisma and bcrypt, added JWT refresh token support, and improved error handling. Updated main bootstrap for better security, CORS, and Swagger setup. Refactored Render deployment config and made PrismaModule global for easier dependency injection.

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,24 +1,42 @@
-# 🌸 Configuration Eterna Backend (Mode Simple)
+# Configuration de base
 NODE_ENV=development
-PORT=8080
+PORT=3000
 
-# Base de données (désactivée pour le moment)
-# DATABASE_URL="postgresql://eterna_user:eterna_password@localhost:5432/eterna_db?schema=public"
+# Base de données SQLite (développement local)
+DATABASE_URL="file:./dev.db"
 
-# JWT Secret
-JWT_SECRET=eterna_super_secret_jwt_key_2024
+# JWT Configuration
+JWT_SECRET=eterna_super_secret_jwt_key_2024_local_dev
 JWT_EXPIRES_IN=7d
+JWT_REFRESH_SECRET=eterna_super_secret_refresh_key_2024_local_dev
+JWT_REFRESH_EXPIRES_IN=30d
 
-# Redis (désactivé pour le moment)
-# REDIS_URL=redis://localhost:6379
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001,http://localhost:5173
 
-# CORS
-CORS_ORIGIN=http://localhost:1420
+# Swagger Configuration
+ENABLE_SWAGGER=true
+SWAGGER_TITLE=ETERNA Backend API
+SWAGGER_DESCRIPTION=API complète pour l'application ETERNA
+SWAGGER_VERSION=1.0.0
 
 # Rate Limiting
-RATE_LIMIT_TTL=60
-RATE_LIMIT_LIMIT=100
+THROTTLE_TTL=60
+THROTTLE_LIMIT=100
 
-# File Upload
-MAX_FILE_SIZE=10485760
-UPLOAD_PATH=./uploads
+# Logging
+LOG_LEVEL=info
+LOG_FILE=logs/eterna.log
+
+# WebSocket Configuration
+WS_PORT=3001
+WS_CORS_ORIGIN=http://localhost:3000,http://localhost:5173
+
+# Security
+BCRYPT_ROUNDS=12
+HELMET_ENABLED=true
+COMPRESSION_ENABLED=true
+
+# ===== CONFIGURATION POUR MIGRATION POSTGRESQL PLUS TARD =====
+# DATABASE_URL_POSTGRES="postgresql://username:password@localhost:5432/eterna_db"
+# Pour activer PostgreSQL, changer DATABASE_URL et modifier schema.prisma
