--- a/backend/env.example
+++ b/backend/env.example
@@ -1,78 +1,38 @@
-# ===== CONFIGURATION DE LA BASE DE DONNÉES =====
-# URL de connexion SQLite (développement local)
-DATABASE_URL="file:./dev.db"
+# Configuration de base
+NODE_ENV=development
+PORT=3000
 
-# ===== CONFIGURATION JWT =====
-# Secret pour la signature des tokens JWT (CHANGER EN PRODUCTION)
-JWT_SECRET="votre-secret-jwt-super-securise-changez-cela"
-# Durée de validité des tokens JWT
-JWT_EXPIRES_IN="7d"
-# Durée de validité des tokens de rafraîchissement
-JWT_REFRESH_EXPIRES_IN="30d"
+# Base de données PostgreSQL
+DATABASE_URL="postgresql://username:password@localhost:5432/eterna_db"
 
-# ===== CONFIGURATION DU SERVEUR =====
-# Port du serveur HTTP
-PORT=8080
-# Port du serveur WebSocket
-WS_PORT=8081
-# Environnement d'exécution
-NODE_ENV="development"
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRES_IN=7d
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+JWT_REFRESH_EXPIRES_IN=30d
 
-# ===== CONFIGURATION CORS =====
-# Origines autorisées (séparées par des virgules)
-CORS_ORIGIN="http://localhost:3000,http://localhost:5173"
-# Credentials autorisés
-CORS_CREDENTIALS=true
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001
 
-# ===== CONFIGURATION DE SÉCURITÉ =====
-# Taux limite des requêtes (requêtes par minute)
+# Swagger Configuration
+ENABLE_SWAGGER=true
+SWAGGER_TITLE=ETERNA Backend API
+SWAGGER_DESCRIPTION=API complète pour l'application ETERNA
+SWAGGER_VERSION=1.0.0
+
+# Rate Limiting
 THROTTLE_TTL=60
 THROTTLE_LIMIT=100
 
-# ===== CONFIGURATION DES LOGS =====
-# Niveau de log
-LOG_LEVEL="info"
-# Dossier des logs
-LOG_DIR="logs"
+# Logging
+LOG_LEVEL=info
+LOG_FILE=logs/eterna.log
 
-# ===== CONFIGURATION RENDER (PRODUCTION) =====
-# URL de l'application frontend sur Render
-FRONTEND_URL="https://votre-app-eterna.onrender.com"
-# URL de l'API backend sur Render
-BACKEND_URL="https://votre-api-eterna.onrender.com"
+# WebSocket Configuration
+WS_PORT=3001
+WS_CORS_ORIGIN=http://localhost:3000
 
-# ===== CONFIGURATION EMAIL (OPTIONNEL) =====
-# Service d'envoi d'emails (SMTP)
-SMTP_HOST="smtp.gmail.com"
-SMTP_PORT=587
-SMTP_USER="votre-email@gmail.com"
-SMTP_PASS="votre-mot-de-passe-app"
-
-# ===== CONFIGURATION STORAGE (OPTIONNEL) =====
-# Service de stockage de fichiers
-STORAGE_TYPE="local" # local, s3, cloudinary
-STORAGE_PATH="./uploads"
-# Pour AWS S3
-AWS_ACCESS_KEY_ID="votre-access-key"
-AWS_SECRET_ACCESS_KEY="votre-secret-key"
-AWS_REGION="eu-west-1"
-AWS_BUCKET_NAME="eterna-uploads"
-
-# ===== CONFIGURATION REDIS (OPTIONNEL) =====
-# Cache et sessions Redis
-REDIS_URL="redis://localhost:6379"
-REDIS_PASSWORD=""
-
-# ===== CONFIGURATION MONITORING =====
-# Prometheus metrics
-ENABLE_METRICS=true
-# Health check
-HEALTH_CHECK_INTERVAL=30000
-
-# ===== CONFIGURATION DE DÉVELOPPEMENT =====
-# Seed de la base de données
-ENABLE_SEED=true
-# Logs détaillés
-DEBUG=true
-# Swagger UI
-ENABLE_SWAGGER=true
+# Security
+BCRYPT_ROUNDS=12
+HELMET_ENABLED=true
+COMPRESSION_ENABLED=true
