--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,56 +1,44 @@
 services:
-  # Service principal de l'API ETERNA
   - type: web
-    name: eterna-backend-api
+    name: eterna-backend
     env: node
-    plan: starter
-    buildCommand: |
-      npm ci
-      npx prisma generate
-      npm run build
+    plan: free
+    buildCommand: npm ci && npx prisma generate && npx prisma migrate deploy
     startCommand: npm run start:prod
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 10000
-      - key: DATABASE_URL
-        fromDatabase:
-          name: eterna-postgres
-          property: connectionString
+        value: 8080
       - key: JWT_SECRET
         generateValue: true
+      - key: JWT_REFRESH_SECRET
+        generateValue: true
       - key: JWT_EXPIRES_IN
-        value: "7d"
+        value: 7d
+      - key: JWT_REFRESH_EXPIRES_IN
+        value: 30d
       - key: CORS_ORIGIN
-        value: "https://eterna-frontend.onrender.com"
-      - key: THROTTLE_TTL
-        value: "60"
-      - key: THROTTLE_LIMIT
-        value: "100"
-      - key: LOG_LEVEL
-        value: "info"
+        value: https://eterna-frontend.onrender.com
       - key: ENABLE_SWAGGER
-        value: "false"
+        value: false
+      - key: THROTTLE_TTL
+        value: 60
+      - key: THROTTLE_LIMIT
+        value: 100
+      - key: BCRYPT_ROUNDS
+        value: 12
+      - key: HELMET_ENABLED
+        value: true
+      - key: COMPRESSION_ENABLED
+        value: true
+      - key: LOG_LEVEL
+        value: info
     healthCheckPath: /health
     autoDeploy: true
 
-  # Base de données PostgreSQL
-  - type: pserv
-    name: eterna-postgres
-    env: postgres
-    plan: starter
-    ipAllowList: []
-    maxConnections: 20
-    maintenanceWindow: sunday
-    maintenanceTime: "02:00"
-    version: "15"
-
-  # Service Redis pour le cache
-  - type: redis
-    name: eterna-redis
-    plan: starter
-    maxmemoryPolicy: allkeys-lru
-    ipAllowList: []
-    maintenanceWindow: sunday
-    maintenanceTime: "02:00"
+databases:
+  - name: eterna-postgres
+    databaseName: eterna_db
+    user: eterna_user
+    plan: free
