Refactor backend for production with SQLite and remove Docker/Postgres support
Switched environment and database configuration to production-ready SQLite, updated documentation, and removed Docker, PostgreSQL migration, and deployment scripts. Cleaned up package and Nest CLI configs, and streamlined seed data and service logic for a simplified local deployment.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "ES2020",
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
@@ -16,26 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@/*": ["src/*"],
-      "@common/*": ["src/common/*"],
-      "@auth/*": ["src/auth/*"],
-      "@users/*": ["src/users/*"],
-      "@chat/*": ["src/chat/*"],
-      "@teams/*": ["src/teams/*"],
-      "@messages/*": ["src/messages/*"],
-      "@websocket/*": ["src/websocket/*"]
-    }
-  },
-  "include": [
-    "src/**/*",
-    "prisma/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "test",
-    "**/*spec.ts"
-  ]
+    "noFallthroughCasesInSwitch": false
+  }
 }
