--- a/backend/config.env
+++ b/backend/config.env
@@ -1,21 +1,21 @@
 # Configuration de base
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 
-# Base de données SQLite (développement local)
-DATABASE_URL="file:./dev.db"
+# Base de données SQLite (production)
+DATABASE_URL="file:./eterna.db"
 
 # JWT Configuration
-JWT_SECRET=eterna_super_secret_jwt_key_2024_local_dev
+JWT_SECRET=eterna_super_secret_jwt_key_2024_production
 JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=eterna_super_secret_refresh_key_2024_local_dev
+JWT_REFRESH_SECRET=eterna_super_secret_refresh_key_2024_production
 JWT_REFRESH_EXPIRES_IN=30d
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001,http://localhost:5173
+CORS_ORIGIN=http://localhost:3000,http://localhost:5173
 
-# Swagger Configuration
-ENABLE_SWAGGER=true
+# Swagger Configuration (désactivé en production)
+ENABLE_SWAGGER=false
 SWAGGER_TITLE=ETERNA Backend API
 SWAGGER_DESCRIPTION=API complète pour l'application ETERNA
 SWAGGER_VERSION=1.0.0
@@ -36,7 +36,3 @@ WS_CORS_ORIGIN=http://localhost:3000,http://localhost:5173
 BCRYPT_ROUNDS=12
 HELMET_ENABLED=true
 COMPRESSION_ENABLED=true
-
-# ===== CONFIGURATION POUR MIGRATION POSTGRESQL PLUS TARD =====
-# DATABASE_URL_POSTGRES="postgresql://username:password@localhost:5432/eterna_db"
-# Pour activer PostgreSQL, changer DATABASE_URL et modifier schema.prisma
