--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,9 +4,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production
+# Build output
 dist/
 build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Database
 *.db
@@ -18,10 +25,39 @@ build/
 logs/
 *.log
 
-# Environment
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
 .env
-.env.local
-.env.production
 
 # IDE
 .vscode/
@@ -34,5 +70,5 @@ logs/
 Thumbs.db
 
 # Temporary files
-*.tmp
-*.temp
+tmp/
+temp/
