--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,14 @@
 {
   "name": "eterna-backend",
   "version": "1.0.0",
-  "description": "Backend complet pour l'application ETERNA avec SQLite",
+  "description": "Backend complet pour l'application ETERNA avec SQLite, optimisé pour le déploiement sur Render",
   "author": "ETERNA Team",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "build": "nest build",
     "start": "nest start",
@@ -14,7 +18,11 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "ts-node prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "deploy:render": "npm run build && npm run start:prod",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -53,6 +61,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "prisma": "^5.7.1",
+    "rimraf": "^5.0.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-loader": "^9.4.3",
@@ -76,5 +85,25 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/votre-username/Eterna_BackEnd.git"
+  },
+  "keywords": [
+    "nestjs",
+    "sqlite",
+    "chat",
+    "teams",
+    "websocket",
+    "render",
+    "deployment"
+  ],
+  "homepage": "https://github.com/votre-username/Eterna_BackEnd#readme",
+  "bugs": {
+    "url": "https://github.com/votre-username/Eterna_BackEnd/issues"
+  },
+  "contributors": [
+    "ETERNA Team"
+  ]
 }
