Remove hardcoded DATABASE_URL from db scripts
Updated database-related npm scripts in package.json to remove the hardcoded DATABASE_URL environment variable. This allows the scripts to use the default or externally provided database configuration.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start:dev": "nest start --watch",
     "start:prod": "npm run db:init && node dist/src/main",
     "db:generate": "prisma generate",
-    "db:push": "DATABASE_URL=file:./prisma/eterna.db prisma db push",
-    "db:init": "DATABASE_URL=file:./prisma/eterna.db prisma generate && DATABASE_URL=file:./prisma/eterna.db prisma db push && DATABASE_URL=file:./prisma/eterna.db ts-node prisma/seed.ts",
-    "db:seed": "DATABASE_URL=file:./prisma/eterna.db ts-node prisma/seed.ts",
-    "db:studio": "DATABASE_URL=file:./prisma/eterna.db prisma studio",
+    "db:push": "prisma db push",
+    "db:init": "prisma generate && prisma db push && ts-node prisma/seed.ts",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:studio": "prisma studio",
     "clean": "rmdir /s /q dist 2>nul || echo dist folder cleaned",
     "prebuild": "npm run clean"
   },
