Update build scripts and render config
Changed npm scripts to use 'npx' for NestJS commands in package.json. Updated render.yaml to run build during deployment and quoted environment variable values for consistency.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "RyanDPC",
   "license": "MIT",
   "scripts": {
-    "build": "nest build",
+    "build": "npx nest build",
     "start": "npm run start:prod",
-    "start:dev": "nest start --watch",
+    "start:dev": "npx nest start --watch",
     "start:prod": "npm run db:init && node dist/src/main",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
