--- a/package.json
+++ b/package.json
@@ -30,19 +30,33 @@
     "@nestjs/throttler": "^5.1.2",
     "@nestjs/websockets": "^10.0.0",
     "@prisma/client": "^5.7.1",
+    "@types/crypto-js": "^4.2.2",
+    "@types/nodemailer": "^7.0.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
     "express-rate-limit": "^8.0.1",
+    "googleapis": "^156.0.0",
     "helmet": "^7.1.0",
+    "nodemailer": "^7.0.5",
+    "openid": "^2.0.13",
     "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "passport-steam": "^1.0.18",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
