Update Steam OAuth config and add test HTML
Changed Steam OAuth URLs in config.env to use localhost for local development. Added test-steam-simple.html to provide a simple interface for testing Steam OAuth integration and configuration endpoints.

--- a/config.env
+++ b/config.env
@@ -61,9 +61,9 @@ APPLE_CALLBACK_URL=http://localhost:8080/api/auth/apple/callback
 
 # Steam OAuth
 STEAM_API_KEY=C38F2305E43830F6D2CA2680862EA40E
-STEAM_RETURN_URL=https://eterna-backend-ezru.onrender.com/api/auth/steam/return
-STEAM_REALM=https://eterna-backend-ezru.onrender.com
-STEAM_DOMAIN=eterna-backend-ezru.onrender.com
+STEAM_RETURN_URL=http://localhost:8080/api/auth/steam/return
+STEAM_REALM=http://localhost:8080
+STEAM_DOMAIN=localhost
 
 # ===========================================
 # 🛡️ SÉCURITÉ & RATE LIMITING
