Enable Google OAuth and update config files
Re-enabled Google OAuth service and controller in the auth module, updated Google OAuth configuration loading to use client_secret.json, and changed environment variables and client secret to new credentials and callback URLs. Also removed obsolete test HTML files and documentation, and ensured Steam OAuth controller returns JSON for all clients.

--- a/config.env
+++ b/config.env
@@ -48,9 +48,9 @@ EMAIL_FROM=noreply@eterna.com
 # ===========================================
 
 # Google OAuth
-GOOGLE_CLIENT_ID=410003933277-md9pv9r15b06k6iprcl4gob6bi0p6rt0.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=http://localhost:8080/api/auth/google/callback
+GOOGLE_CLIENT_ID=410003933277-anmle5nmbi2pvef80nesvjkee5435d81.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=https://eterna-backend-ezru.onrender.com/api/auth/google/callback
 
 # Apple OAuth
 APPLE_CLIENT_ID=
