Add OAuth cookie handling and finalize endpoints
Introduces cookie-parser middleware and related dependencies for handling OAuth data via cookies. Adds endpoints to finalize OAuth authentication and retrieve stored OAuth data for Google and Steam providers. Updates redirect URIs in the OAuth service to use configuration values.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/throttler": "^5.1.2",
     "@nestjs/websockets": "^10.0.0",
     "@prisma/client": "^5.7.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/crypto-js": "^4.2.2",
     "@types/nodemailer": "^7.0.0",
     "@types/passport": "^1.0.17",
@@ -40,6 +41,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
     "express-rate-limit": "^8.0.1",
