Migration from NestJS to Express and restructure backend
Replaces the NestJS-based backend with a new Express.js architecture. Removes all NestJS modules, controllers, services, DTOs, and configuration files, and introduces new Express routes, middleware, and service files. Updates documentation, environment configuration, and Prisma schema to match the new structure. Adds OAuth, JWT, user, team, room, and messaging features using Express, Passport.js, and Socket.io. Prepares the project for deployment on Render and updates package dependencies accordingly.

--- a/render.yaml
+++ b/render.yaml
@@ -2,18 +2,35 @@ services:
   - type: web
     name: eterna-backend
     env: node
-    buildCommand: "npm ci && npm run build"
-    startCommand: "npm run start:prod"
+    plan: free
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
+      - key: RENDER
+        value: true
       - key: PORT
-        value: "8080"
-      - key: DATABASE_URL
-        value: "file:./prisma/eterna.db"
+        value: 10000
+      - key: CORS_ORIGIN
+        value: https://eterna-frontend.onrender.com
       - key: JWT_SECRET
         generateValue: true
-      - key: JWT_REFRESH_SECRET
+      - key: SESSION_SECRET
         generateValue: true
-      - key: CORS_ORIGIN
-        value: "*"
+      - key: GOOGLE_CLIENT_ID
+        sync: false
+      - key: GOOGLE_CLIENT_SECRET
+        sync: false
+      - key: STEAM_API_KEY
+        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: eterna-db
+          property: connectionString
+
+databases:
+  - name: eterna-db
+    databaseName: eterna_db
+    user: eterna_user
+    plan: free
