--- a/package.json
+++ b/package.json
@@ -1,108 +1,89 @@
 {
   "name": "eterna-backend",
-  "version": "1.0.0",
-  "description": "Backend ETERNA optimisé pour Render avec SQLite",
-  "author": "RyanDPC",
-  "license": "MIT",
+  "version": "2.0.0",
+  "description": "Backend ETERNA - Node.js + Express + Prisma + PostgreSQL",
+  "main": "src/server.js",
   "scripts": {
-    "build": "npx nest build",
-    "start": "npm run start:prod",
-    "start:dev": "npx nest start --watch",
-    "start:prod": "npm run db:init && node dist/src/main",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "build": "npm run build:prisma",
+    "build:prisma": "prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:init": "prisma generate && prisma db push && ts-node prisma/seed.ts",
-    "db:seed": "ts-node prisma/seed.ts",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:seed": "node prisma/seed.js",
     "db:studio": "prisma studio",
-    "clean": "rmdir /s /q dist 2>nul || echo dist folder cleaned",
-    "prebuild": "npm run clean"
+    "db:reset": "prisma migrate reset --force",
+    "test": "jest",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
+  "keywords": [
+    "eterna",
+    "backend",
+    "express",
+    "prisma",
+    "postgresql",
+    "oauth",
+    "chat",
+    "websockets"
+  ],
+  "author": "RyanDPC",
+  "license": "MIT",
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.0.0",
-    "@nestjs/swagger": "^7.1.17",
-    "@nestjs/terminus": "^10.2.0",
-    "@nestjs/throttler": "^5.1.2",
-    "@nestjs/websockets": "^10.0.0",
-    "@prisma/client": "^5.7.1",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/crypto-js": "^4.2.2",
-    "@types/nodemailer": "^7.0.0",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "@types/uuid": "^10.0.0",
-    "axios": "^1.11.0",
-    "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "@prisma/client": "^5.22.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.7",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^17.2.1",
-    "express-rate-limit": "^8.0.1",
-    "googleapis": "^156.0.0",
+    "connect-pg-simple": "^8.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "googleapis": "^128.0.0",
     "helmet": "^7.1.0",
-    "nodemailer": "^7.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "openid": "^2.0.13",
     "passport": "^0.7.0",
-    "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-steam": "^1.0.18",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
+    "pg": "^8.11.3",
+    "sharp": "^0.32.6",
     "socket.io": "^4.7.4",
-    "uuid": "^11.1.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/compression": "^1.7.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/express-session": "^1.17.10",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.4",
+    "@types/nodemailer": "^6.4.14",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "@types/passport-steam": "^1.0.4",
+    "@types/pg": "^8.10.9",
+    "@types/uuid": "^9.0.7",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
     "prisma": "^5.7.1",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -112,16 +93,6 @@
     "type": "git",
     "url": "https://github.com/RyanDPC/Eterna_BackEnd.git"
   },
-  "keywords": [
-    "nestjs",
-    "backend",
-    "api",
-    "chat",
-    "teams",
-    "websockets",
-    "sqlite",
-    "render"
-  ],
   "homepage": "https://github.com/RyanDPC/Eterna_BackEnd#readme",
   "bugs": {
     "url": "https://github.com/RyanDPC/Eterna_BackEnd/issues"
